--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -60,6 +60,8 @@ div:focus {
 }
 
 // main-container global css
-.app-container {
+.container {
   padding: 20px;
+  background-color: #fff;
+  box-shadow: 0 1px 4px rgba(0, 21, 41, 0.08);
 }
