--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -62,6 +62,7 @@ div:focus {
 // main-container global css
 .container {
   padding: 20px;
+  margin-right: 20px;
   background-color: #fff;
   box-shadow: 0 1px 4px rgba(0, 21, 41, 0.08);
 }
